# blog_samples

./: README.md
2024/03/cel-go1/: deployment.json  go.mod  go.sum
2024/03/otel-attribute-processor/: docker-compose.yaml  go.mod  main.go  otel-collector-config.yaml
TaPL/haskell/simple-arith/: ChangeLog.md  README.md  package.yaml  simple-arith.cabal
TaPL/haskell/untyped-lambda/: ChangeLog.md  README.md  package.yaml  untyped-lambda.cabal
dive_into_nom/bytes_tag/: Cargo.toml
dive_into_nom/bytes_tag/src/: main.rs
dive_into_nom/nom-like-parser/: ChangeLog.md  README.md  hie.yaml  nom-like-parser.cabal  package.yaml
dive_into_nom/nom-like-parser/app/: Main.hs
dive_into_nom/nom-like-parser/src/: Parser.hs
dive_into_nom/nom-like-parser/test/: Spec.hs
dive_into_nom/special_is_a/: Cargo.toml
dive_into_nom/special_is_a/src/: main.rs
kubernetes/argocd-image-updater/: setup.sh
kubernetes/argocd-image-updater/argocd-configs/: old-nginx.yaml
kubernetes/argocd-image-updater/old-nginx/: .argocd-source-old-nginx.yaml  kustomization.yaml  old-deployment.yaml  old-service.yaml
kubernetes/proxysql/: mysql.deployment.yaml  mysql.service.yaml  proxysql-core.configmap.yaml  proxysql-core.statefulset.yaml
mysql/anti_patterns/many_join/: README.md  docker-compose.yaml  insert-data.sh  plot.py  pyproject.toml
mysql/anti_patterns/many_join/initdb/: schema.sql
nginx/least-conn/: Dockerfile  compose.yaml  go.mod  nginx.conf  prometheus.yml
toy-type-system/: README.md
toy-type-system/mincaml-inferer/: Cargo.toml
toy-type-system/monomorphism/: Cargo.toml
(+19 files in other folders)
