[project]
name = "many-join"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "drumato", email = "drumato43@gmail.com" }
]
dependencies = [
    "mysql-connector-python>=9.0.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/many_join"]
